<resources>
    <string name="app_name">AppGames</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="login">Login</string>
    <string name="heads_or_tails">Heads Or Tails</string>
    <string name="add_defeat">Add Defeat</string>
    <string name="add_win">Add Win</string>
    <string name="select_coin_face">Select coin Face</string>
    <string name="head">Head</string>
    <string name="tail">Tail</string>
    <string name="enter_selected_number_face">Enter selected number face</string>
    <string name="roll_dice">Roll Dice</string>
</resources>